--- a/modules/infost_350/pets.yaml
+++ b/modules/infost_350/pets.yaml
@@ -49,6 +49,7 @@ classes:
 
       - !Method
         name: display
+        doc: Displays the pet at its current distance
         code: |
           return f"{self.distance * '-'} {self.name}"
 
@@ -57,6 +58,7 @@ classes:
     bases: [ Pet ]
     methods:
       - !Method
+        doc: Customized display for the robo pet with it's robot emoji
         name: display
         code: |
           return f"{self.distance * '-'} 🤖 {self.name}"
@@ -79,12 +81,14 @@ classes:
     methods:
       - !Method
         name: ready
+        doc: Reinitialize the race
         code: |
           for p in self.participants:
             p.distance = self.distance
 
       - !Method
         name: run
+        doc: Run the race
         code: |
           import time
           placeholder = st.empty()
@@ -106,8 +110,20 @@ instances:
   - !Scene
     title: "Pet race"
     icon: "🏁"
-    lines: [3, 2, 1]
+    lines: [1, 3, 2, 1]
     as_name: scene
+
+  - !Text
+    title: 🐕💨
+    border: False
+    text: |
+      **For** a curious student
+      **who** wants to organize a pet race
+      **our app** shows a way to manage it
+      **while** having fun
+
+    footer: |
+      _🪤 Adjust values, and hover over buttons to see the pets run!_
 
   - !Pet &lucky
     name: 🐕 Lucky
