Add course materials

--- a/requirements.runtime.txt
+++ b/requirements.runtime.txt
@@ -25,15 +25,15 @@ pillow~=9.2.0
 qrcode~=7.3.1
 matplotlib~=3.9.1
 lxml~=5.2.2
-openai
-networkx
-pyvis
-graphviz
-line-profiler
-pyinstaller
-pympler
-behave
-ansi2html
-streamlit-javascript
-streamlit_js_eval
-beartype
+openai==1.59.7
+networkx==3.4.2
+pyvis==0.3.2
+graphviz==0.20.1
+line-profiler==4.2.0
+pyinstaller==6.13.0
+pympler==1.0.1
+behave==1.2.6
+ansi2html==1.9.2
+streamlit-javascript==0.1.5
+streamlit_js_eval==0.1.7
+beartype==0.21.0
