--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -5,6 +5,10 @@ on:
     - cron: "*/30 * * * *"
   workflow_dispatch:
 
+concurrency:
+  group: ping-streamlit
+  cancel-in-progress: true
+
 jobs:
   ping:
     runs-on: ubuntu-latest
