Add course materials

--- a/modules/fun.yaml
+++ b/modules/fun.yaml
@@ -65,7 +65,7 @@ instances:
     expanded: False
     icon: ☕️
     text: |
-      **For** Alex, a freshman in a hurry, who loves hot chocolate
+      **For** Alex, a freshman in a hurry, a hot chocolate lover
       
       **Who** wants to adjust the right temperature without burning themselves
       
