--- a/modules/welcome.yaml
+++ b/modules/welcome.yaml
@@ -1,6 +1,6 @@
 module:
   - name: welcome
-    doc: "Welcome to the light side of the forcee"
+    doc: "Welcome to the light side of the force!"
     icon: "👋"
     is_admin: True
 
